docs: Add Back templates to all wiki subpages for consistent navigation
- Add Back templates to 35 wiki subpages across multiple games
- Fix empty Back templates with proper parent page links
- Soul Blazer: 15 subpages (Audio, Bosses, Characters, Credits, etc.)
- FFMQ: ROM_Map and 4 TBL language subpages
- Dragon Warrior IV: Characters, RAM_Map, ROM_Map, SRAM_Map
- Dragon Warrior series: SRAM_Map, DW2/DW3 TBL
- Other: Mappy-Land TBL, Yoshi's Cookie TBL, Robotrek Weapons, 7th Saga Notes

--- a/Wiki/NES/Dragon_Warrior_III/TBL.wikitext
+++ b/Wiki/NES/Dragon_Warrior_III/TBL.wikitext
@@ -1,3 +1,4 @@
+{{Back|Dragon Warrior III (NES)}}
 {{tbl|game=Dragon Warrior 3 (NES)}}
 
 This is the text table (TBL) file for ''Dragon Warrior III'' (NES). It defines the mapping between ROM byte values and displayed characters. DW3 uses extensive DTE compression.
