--- a/Wiki/SNES/Soul_Blazer/Audio.wikitext
+++ b/Wiki/SNES/Soul_Blazer/Audio.wikitext
@@ -1,3 +1,4 @@
+{{Back|Soul Blazer (SNES)}}
 {{DISPLAYTITLE:Soul Blazer:Audio}}
 '''Soul Blazer''' features a complete SPC700 audio system with music composed by '''Yukihide Takekawa''' (タケカワユキヒデ).
 
