--- a/Wiki/SNES/Soul_Blazer/Bosses.wikitext
+++ b/Wiki/SNES/Soul_Blazer/Bosses.wikitext
@@ -1,3 +1,4 @@
+{{Back|Soul Blazer (SNES)}}
 {{DISPLAYTITLE:Soul Blazer:Bosses}}
 '''Soul Blazer''' features 8 major boss fights across 6 acts, plus the final confrontation with Deathtoll.
 
