--- a/Wiki/SNES/Soul_Blazer/Characters.wikitext
+++ b/Wiki/SNES/Soul_Blazer/Characters.wikitext
@@ -1,3 +1,4 @@
+{{Back|Soul Blazer (SNES)}}
 {{DISPLAYTITLE:Soul Blazer:Characters}}
 '''Soul Blazer''' features a cast of characters including the player hero, various NPCs, and souls released from monster lairs.
 
