--- a/Wiki/SNES/Soul_Blazer/Data_Tables.wikitext
+++ b/Wiki/SNES/Soul_Blazer/Data_Tables.wikitext
@@ -1,3 +1,4 @@
+{{Back|Soul Blazer (SNES)}}
 {{DISPLAYTITLE:Soul Blazer:Data Tables}}
 This page documents the '''data tables''' in '''[[Soul Blazer]]''' (SNES).
 
