--- a/Wiki/SNES/Soul_Blazer/Formulas.wikitext
+++ b/Wiki/SNES/Soul_Blazer/Formulas.wikitext
@@ -1,3 +1,4 @@
+{{Back|Soul Blazer (SNES)}}
 {{DISPLAYTITLE:Soul Blazer:Formulas}}
 This page documents the '''game mechanics formulas''' in '''[[Soul Blazer]]''' (SNES).
 
