--- a/Wiki/SNES/Soul_Blazer/Glitches.wikitext
+++ b/Wiki/SNES/Soul_Blazer/Glitches.wikitext
@@ -1,3 +1,4 @@
+{{Back|Soul Blazer (SNES)}}
 {{DISPLAYTITLE:Soul Blazer:Glitches}}
 This page documents '''glitches, bugs, and exploits''' in '''[[Soul Blazer]]''' (SNES).
 
