--- a/Wiki/SNES/Soul_Blazer/Items.wikitext
+++ b/Wiki/SNES/Soul_Blazer/Items.wikitext
@@ -1,3 +1,4 @@
+{{Back|Soul Blazer (SNES)}}
 {{DISPLAYTITLE:Soul Blazer:Items}}
 This page documents '''items and equipment''' in '''[[Soul Blazer]]''' (SNES).
 
