--- a/Wiki/SNES/Soul_Blazer/Magic.wikitext
+++ b/Wiki/SNES/Soul_Blazer/Magic.wikitext
@@ -1,3 +1,4 @@
+{{Back|Soul Blazer (SNES)}}
 {{DISPLAYTITLE:Soul Blazer:Magic}}
 '''Soul Blazer''' features a magic system where the player collects various soul magics throughout the game. Each magic type has unique properties, costs, and uses.
 
