--- a/Wiki/SNES/Soul_Blazer/Progression.wikitext
+++ b/Wiki/SNES/Soul_Blazer/Progression.wikitext
@@ -1,3 +1,4 @@
+{{Back|Soul Blazer (SNES)}}
 {{DISPLAYTITLE:Soul Blazer:Progression}}
 This is the '''progression guide''' for '''[[Soul Blazer]]''' (SNES), documenting the game's structure, bosses, and completion requirements.
 
