--- a/Wiki/NES/Dragon_Warrior_II/TBL.wikitext
+++ b/Wiki/NES/Dragon_Warrior_II/TBL.wikitext
@@ -1,3 +1,4 @@
+{{Back|Dragon Warrior II (NES)}}
 {{tbl|game=Dragon Warrior II}}
 
 This is the text table (TBL) file for ''Dragon Warrior II'' (NES). It defines the mapping between ROM byte values and displayed characters.
