--- a/Wiki/SNES/Soul_Blazer/Credits.wikitext
+++ b/Wiki/SNES/Soul_Blazer/Credits.wikitext
@@ -1,3 +1,4 @@
+{{Back|Soul Blazer (SNES)}}
 {{DISPLAYTITLE:Soul Blazer:Credits}}
 '''Soul Blazer''' was developed by '''Quintet''' and published by '''Enix''' in 1992. This page documents the development team, credits, and historical context.
 
