--- a/Wiki/SNES/Soul_Blazer/Enemies.wikitext
+++ b/Wiki/SNES/Soul_Blazer/Enemies.wikitext
@@ -1,3 +1,4 @@
+{{Back|Soul Blazer (SNES)}}
 {{DISPLAYTITLE:Soul Blazer:Enemies}}
 This page documents '''enemy data''' in '''[[Soul Blazer]]''' (SNES).
 
