--- a/Wiki/SNES/Soul_Blazer/Secrets.wikitext
+++ b/Wiki/SNES/Soul_Blazer/Secrets.wikitext
@@ -1,3 +1,4 @@
+{{Back|Soul Blazer (SNES)}}
 {{DISPLAYTITLE:Soul Blazer:Secrets}}
 '''Soul Blazer''' contains numerous secrets, hidden items, glitches, and easter eggs.
 
