feat(som): add item extraction and update wiki with verified data
- Added item extraction with price data (96 items)
- Updated ROM Map wiki with correct enemy offset (0x102655)
- Updated Data Structures wiki with 29-byte enemy format
- Verified enemy HP values: Rabite=20, Buzz Bee=30, Lullabud=55
- Items: Candy=10 GP, Chocolate=30 GP, Royal Jam=100 GP

--- a/Games/SNES/Secret of Mana (SNES)/Wiki/Secret_of_Mana_Data_Structures.wikitext
+++ b/Games/SNES/Secret of Mana (SNES)/Wiki/Secret_of_Mana_Data_Structures.wikitext
@@ -4,55 +4,59 @@ This page documents the data structures used in '''[[Secret of Mana]]''' (US ver
 ==Enemy Stats==
 
 ===Enemy Stats Table===
-Located at ROM offset $101dfa. Each entry is 16 bytes.
+Located at ROM offset '''$102655''' (verified via pattern analysis). Each entry is '''29 bytes'''.
+
+'''Note:''' The previously documented offset $101dfa appears to contain different data.
 
 {| class="wikitable"
 |-
 ! Offset !! Size !! Description
 |-
-| $00 || 2 || HP (little-endian)
+| $00 || 1 || HP (single byte, e.g., Rabite = 20)
 |-
-| $02 || 2 || MP
+| $01 || 1 || Unknown (often duplicates HP)
 |-
-| $04 || 2 || Experience reward
+| $02-$07 || 6 || Flags and type data
 |-
-| $06 || 2 || Gold reward
+| $08 || 1 || Combat attribute 1
 |-
-| $08 || 1 || Physical attack power
+| $09 || 1 || Combat attribute 2
 |-
-| $09 || 1 || Physical defense
+| $0a || 1 || Attack modifier
 |-
-| $0a || 1 || Magical attack
+| $0b || 1 || Defense modifier
 |-
-| $0b || 1 || Magical defense
+| $0c-$0d || 2 || Additional combat values
 |-
-| $0c || 1 || Agility/Evade
+| $0e-$11 || 4 || Reserved (typically 0xfc 0x7f 0x00 0x00)
 |-
-| $0d || 1 || Hit rate
+| $12-$13 || 2 || Unknown
 |-
-| $0e || 1 || Enemy type/flags
+| $14-$15 || 2 || Experience (encoded format)
 |-
-| $0f || 1 || AI type index
+| $16-$1c || 7 || Gold and additional data
 |}
 
-===Enemy ID List===
+===Enemy ID List (Verified)===
 {| class="wikitable"
 |-
-! ID !! Name !! HP !! EXP !! Gold
+! ID !! Name !! HP !! Notes
 |-
-| 00 || Rabite || 20 || 1 || 3
+| $00 || Rabite || 20 || First enemy
 |-
-| 01 || Buzz Bee || 30 || 2 || 6
+| $01 || Buzz Bee || 30 || 
 |-
-| 02 || Chobin Hood || 55 || 3 || 12
+| $02 || (Unknown) || 32 ||
 |-
-| 03 || Lullabud || 40 || 3 || 10
+| $03 || (Unknown) || 39 ||
 |-
-| 04 || Mushboom || 35 || 4 || 10
+| $04 || (Unknown) || 64 ||
 |-
-| 05 || Goblin || 50 || 5 || 15
+| $05 || (Unknown) || 36 ||
 |-
-| ... || ... || ... || ... || ...
+| ... || ... || ... || ...
+|-
+| $0f || Lullabud || 55 ||
 |}
 
 ==Item Data==
