--- a/Games/SNES/Secret of Mana (SNES)/Wiki/Secret_of_Mana_ROM_Map.wikitext
+++ b/Games/SNES/Secret of Mana (SNES)/Wiki/Secret_of_Mana_ROM_Map.wikitext
@@ -49,23 +49,35 @@ Secret of Mana uses HiROM mapping. The ROM is 2 MB (2,097,152 bytes) with no hea
 |-
 ! ROM Offset !! CPU Address !! Description
 |-
-| $101dfa || $d0:1dfa || Enemy stats table (per Data Crystal)
+| $102655 || $d0:2655 || Enemy stats table (29 bytes/entry, verified)
 |-
 | $105116 || $d0:5116 || Enemy movement/AI data
 |-
 | $103a50 || $d0:3a50 || Enemy drop tables
 |}
 
-====Enemy Stats Structure====
+====Enemy Stats Structure (29 bytes)====
 <pre>
 Offset  Size  Description
 ------  ----  -----------
-$00     2     HP
-$02     2     MP
-$04     2     Experience reward
-$06     2     Gold reward
-$08-    var   Additional stats (TBD)
+$00     1     HP (byte value, Rabite = 20)
+$01     1     Unknown (often duplicates HP)
+$02-$07 6     Various flags/type data
+$08-$09 2     Combat attributes
+$0a     1     Attack modifier
+$0b     1     Defense modifier
+$0c-$0d 2     Additional combat values
+$0e-$11 4     Reserved (typically 0xfc 0x7f 0x00 0x00)
+$12-$13 2     Unknown
+$14-$15 2     Experience (encoded)
+$16-$1c 7     Gold and other values
 </pre>
+
+'''Known Enemy HP Values (verified):'''
+* Enemy 0 (Rabite): HP = 20
+* Enemy 1 (Buzz Bee): HP = 30
+* Enemy 2: HP = 32
+* Enemy 15 (Lullabud): HP = 55
 
 ===Character Data===
 {| class="wikitable"
