docs: Add SNES game wiki pages (DQ3, CT, FF4, FFMQ)
- Dragon Quest III: Class_System and Personalities wiki pages
- Chrono Trigger: Tech System wiki page (Single/Double/Triple Techs)
- Final Fantasy IV: ATB System and Magic wiki pages
- Final Fantasy Mystic Quest: Updated index with Game Systems links
- Updated all game indexes with new documentation links

--- a/DarkRepos/Wiki/SNES/Chrono_Trigger/index.wikitext
+++ b/DarkRepos/Wiki/SNES/Chrono_Trigger/index.wikitext
@@ -108,9 +108,13 @@ Three-character combination attacks requiring specific party compositions.
 
 ==Documentation==
 
+===Technical===
 * [[Chrono Trigger:ROM_Map|ROM Map]] - Complete ROM layout
 * [[Chrono Trigger:RAM_Map|RAM Map]] - Runtime memory documentation
 * [[Chrono Trigger:TBL|Text Table]] - Character encoding
+
+===Game Systems===
+* [[Chrono Trigger:Techs|Tech System]] - Single, Double, and Triple Techs
 
 ==Known Dumps==
 
