docs: Add DW4 Formulas page and update session log
- Formulas.wikitext - comprehensive damage, stat, and mechanics calculations
- Updated index with Formulas link
- Updated session log with wiki documentation progress

--- a/DarkRepos/Wiki/NES/Dragon_Warrior_IV/index.wikitext
+++ b/DarkRepos/Wiki/NES/Dragon_Warrior_IV/index.wikitext
@@ -133,6 +133,7 @@ Temporary party members that join in specific chapters:
 * [[Dragon Warrior IV:Battle_System|Battle System]] - AI tactics and combat mechanics
 * [[Dragon Warrior IV:EXP_System|EXP System]] - Experience calculation formulas
 * [[Dragon Warrior IV:Spells|Spells]] - Magic system and spell tables
+* [[Dragon Warrior IV:Formulas|Formulas]] - All game mechanics calculations
 
 ===Game Data===
 * [[Dragon Warrior IV:Characters|Characters]] - Party members and companions
